# picopixelz

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  artnet.c  artnet.h  common.h  config.c  config.h  hw_config.c  ppixelz.c  web.c  web.h  ws2812.c  ws2812.h
ly/src/: config_lexer.l  config_parser.y
